# tree-sitter-mtml

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  assistant.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mtml.h  tree-sitter-mtml.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mtml/: binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMtmlTests/: TreeSitterMtmlTests.swift
examples/: function.mtml
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basic.txt
