[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-mtml"
description = ""
version = "1.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "mtml"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.9"
license.text = "ISC"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-mtml"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
